# mlflow-widgets

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASING.md  TODO.md  mkdocs.yml  pyproject.toml  skills-lock.json
.cursor/plans/: Chart Filters and Axes-68fef715.plan.md  Fix and Extend MLflow Widgets-affae6c0.plan.md  MLflow Chart Widget-affae6c0.plan.md  Nested Runs  Parallel Coords-68fef715.plan.md  Polish and Combo Widget-affae6c0.plan.md  llm-friendly_mkdocs_plugins_e3b80108.plan.md  mkdocs_documentation_setup_86c345dc.plan.md  pypi_publishing_setup_c9335b27.plan.md
.cursor/rules/: project-conventions.mdc
.cursor/skills/using-mlflow-widgets/: SKILL.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-04-01_09-05-40Z-pypi-test-cases.md  2026-04-01_10-32-59Z-project-deployment-to-pypi-using-uv.md  2026-04-01_10-37-15Z-project-structure-exploration.md  2026-04-01_11-49-36Z-python-project-documents-mkdocs.md  2026-04-01_12-17-41Z-documentation-best-practices-selection.md  2026-04-01_12-21-42Z-exploration-of-mlflow-widgets-project.md  2026-04-01_14-04-47Z-img-shields-io-badge.md  2026-04-01_14-22-40Z-github-action-quota-cover.md  2026-04-01_14-31-02Z-mlflowparallelcoordinates-parallel-py-src.md  2026-04-02_03-17-10Z-examples-examples-readme-md.md
docs/: examples.md  getting-started.md  index.md  installation.md
docs/reference/: chart.md  index.md  parallel.md  selector.md  table.md
docs/widgets/: chart.md  parallel.md  selector.md  table.md
examples/: README.md  combo_demo.py  demo.py  live_tracking.py  nested_demo.py  parallel_demo.py  table_demo.py
notes/: ci-cd-trigger-cheatsheet.md  docs-stack-evaluation.md  github-pages-setup.md  publishing-to-pypi.md  python-agent-skills.md  readme-badges.md
scripts/: check_dist_contents.py
src/mlflow_chart/: __init__.py  chart.py
src/mlflow_chart/static/: mlflow-chart.js
src/mlflow_widgets/: __init__.py  chart.py  parallel.py  selector.py  table.py
src/mlflow_widgets/static/: mlflow-chart.js  mlflow-parallel.js  mlflow-table.js
tests/: conftest.py  smoke_test.py  test_chart.py  test_examples.py  test_examples_parse.py  test_import.py  test_packaging.py  test_public_api.py  test_resources.py  test_table_selector_parallel.py  test_widget_init.py
