[project]
name = "mlflow-widgets"
version = "0.1.0"
description = "Anywidget-based notebook widgets for MLflow: live charts, run tables, and more"
readme = "README.md"
authors = [
    { name = "Da-Wei Lee", email = "daviddwlee84@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mlflow", "widgets", "anywidget", "jupyter", "marimo", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "anywidget>=0.9.2",
    "traitlets",
]

[project.optional-dependencies]
mlflow = [
    "mlflow>=2.0",
    "python-socks[asyncio]>=2.8.1",
]
demo = [
    "marimo>=0.10.0",
    "mlflow>=2.0",
]

[dependency-groups]
dev = [
    "pandas>=2.0",
    "pytest>=8.0",
    "twine>=6.0",
]

[project.urls]
Homepage = "https://github.com/daviddwlee84/mlflow-widgets"
Repository = "https://github.com/daviddwlee84/mlflow-widgets"
Issues = "https://github.com/daviddwlee84/mlflow-widgets/issues"
Changelog = "https://github.com/daviddwlee84/mlflow-widgets/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-packages = true
artifacts = ["src/mlflow_widgets/static/*"]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
