[project]
name = "mlflow-widgets"
version = "0.1.0"
description = "Anywidget-based notebook widgets for MLflow: live charts, run tables, and more"
readme = "README.md"
authors = [
    { name = "Da-Wei Lee", email = "daviddwlee84@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mlflow", "anywidget", "jupyter", "marimo", "visualization", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "anywidget>=0.9.2",
    "traitlets",
]

[project.optional-dependencies]
mlflow = [
    "mlflow>=2.0",
    "python-socks[asyncio]>=2.8.1",
]
demo = [
    "marimo>=0.10.0",
    "mlflow>=2.0",
]
dev = [
    "pytest>=8.0",
    "twine>=6.0",
]

[project.urls]
Homepage = "https://github.com/daviddwlee84/mlflow-widgets"
Repository = "https://github.com/daviddwlee84/mlflow-widgets"
Issues = "https://github.com/daviddwlee84/mlflow-widgets/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-packages = true
artifacts = ["src/mlflow_widgets/static/*"]
